--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.4"
   }
